--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.7.4",
     "gray-matter": "^4.0.3",
     "next": "^14.0.0",
     "next-mdx-remote": "^4.4.1",
